funkcje walidacji w oddzielnej klasie

--- a/template/login.html
+++ b/template/login.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html>
 <body>
-
+<h1>Zaloguj się do panelu</h1>
+<form action="./login" method="post">
+    Wprowadź login: <input type="text" name="customer" placeholder="login"><br>
+    Wprowadź hasło: <input type="password" name="password" placeholder="hasło"><br>
+    <input type="submit" value="Zaloguj się"><br>
+    <p>Jeśli jeszcze nie masz konta, <a href="./newcustomer">zarejestruj się</a></p>
+</form>
 </body>
 </html>
